# maiscope-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt
src/: lib.rs  main.rs
src/plugins/: lyon_shape.rs  mod.rs
src/systems/: audio.rs  chart_playback.rs  component.rs  mod.rs
src/systems/parser/: chart.rs  duration.rs  mod.rs  note.rs  slide.rs
src/systems/visual/: component.rs  judgement_circle.rs  mod.rs  movement.rs  resources.rs  shapes.rs  slide_path.rs  spawning.rs
src/systems/visual/movement/: animation.rs  mod.rs
src/systems/visual/slide_path/: generators.rs  geometry.rs  mod.rs  trace.rs
